--- a/lang/ko-KR.json
+++ b/lang/ko-KR.json
@@ -700,5 +700,6 @@
     "data_missing" : "정보 없음",
     "not_use_view_count" : "조회수 기능 사용 안함",
     "login_able_and_regsiter_disable" : "로그인 허용 및 회원가입 비허용",
-    "private" : "비공개"
+    "private" : "비공개",
+    "password_same_as_id_error": "비밀번호는 사용자 ID와 같을 수 없습니다."
 }
